test/bad/type_err1.prg
// FAILS: tests.txt:5:5: Type error: expected `bool', got `string'.

foo := 1;

if ("boo") // here
    foo := 3;
